# backend/src/controllers/auth.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Example, Post, Route, Tags } from 'tsoa';
+import { Body, Controller, Post, Route, Tags } from 'tsoa';
 import { signin } from '../services/auth.service';
 import { AuthToken, AuthUser } from '../models/Auth';
 import { getLogger } from '../middlewares/logger';
@@ -10,14 +10,9 @@ const logger = getLogger();
 export class AuthController extends Controller {
   /**
    * Authenticates user into dominus. Supply proper username and password.
+   * @param user AuthUser: contains details required for signing into system
    */
   @Post('signin')
-  @Example<AuthToken>({
-    id: 82,
-    username: 'oskkos',
-    accessToken:
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NCwidXNlcm5hbWUiOiJvc2trb3MiLCJpYXQiOjE1OTAyMjMxOTgsImV4cCI6MTU5MDMwOTU5OH0.tP-5h7NmH9aafoIKACrlkFZkLpY3slRRdJbTMk8jMHw',
-  })
   public async signin(@Body() user: AuthUser): Promise<AuthToken> {
     try {
       const token = await signin(user);
